# os-beginner

./: .gitignore  README.md
01/rust/: Cargo.toml  Makefile.toml
01/rust/src/: main.rs
02/mikan-os/: Cargo.toml  Makefile.toml
02/mikan-os/src/: chars.rs  main.rs
03/: Makefile.toml
03/kernel/: Cargo.toml
03/kernel/.cargo/: config.toml
03/kernel/src/: main.rs
03/mikan-loader/: Cargo.toml  Makefile.toml
03/mikan-loader/src/: chars.rs  graphics.rs  main.rs
devenv/: OVMF_VARS.fd  make_image.sh  make_usb.sh  mount  mount_image.sh  run_image.sh  run_image_debug.sh  run_qemu.sh  run_qemu_debug.sh  umount
diary/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  08_5.md  09.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  30.md
mikan-os/: Makefile.toml  recover.sh
mikan-os/apps/app-lib/: Cargo.toml
mikan-os/apps/app-lib/app-lib/: Cargo.toml
mikan-os/apps/app-lib/app-lib-macros/: Cargo.toml
mikan-os/apps/app-lib/app-lib-macros/src/: lib.rs
mikan-os/apps/app-lib/app-lib/src/: _alloc.rs  args.rs  buf.rs  errno.rs  events.rs  fs.rs  graphics.rs  io.rs  lib.rs  logger.rs  stdio.rs  syscall.rs  time.rs  unistd.rs
mikan-os/apps/app-lib/app-lib/tests/: buf.rs
mikan-os/apps/app-lib/src/: errno.rs  lib.rs  syscall.rs
mikan-os/apps/blocks/: .gitignore  Cargo.toml  Makefile
mikan-os/apps/blocks/src/: main.rs
mikan-os/apps/cp/: .gitignore  Cargo.toml  Makefile
mikan-os/apps/cp/src/: main.rs
mikan-os/apps/cube/: .gitignore  Cargo.toml  Makefile
mikan-os/apps/cube/src/: main.rs
mikan-os/apps/dpage/: .gitignore  Cargo.toml  Makefile
mikan-os/apps/dpage/src/: main.rs
mikan-os/apps/eye/: .gitignore  Cargo.toml  Makefile
mikan-os/apps/eye/src/: main.rs
mikan-os/apps/fault/: .gitignore  Cargo.toml  Makefile
mikan-os/apps/fault/src/: main.rs
mikan-os/apps/large/: .gitignore  Cargo.toml  Makefile
mikan-os/apps/large/src/: main.rs
mikan-os/apps/lines/: .gitignore  Cargo.toml  Makefile
mikan-os/apps/lines/src/: main.rs
mikan-os/apps/mmap/: .gitignore  Cargo.toml  Makefile
mikan-os/apps/mmap/src/: main.rs
mikan-os/apps/paint/: .gitignore  Cargo.toml  Makefile
mikan-os/apps/paint/src/: main.rs
mikan-os/apps/readfile/: .gitignore  Cargo.toml  Makefile
mikan-os/apps/readfile/src/: main.rs
mikan-os/apps/rpn/: .gitignore  Cargo.toml  Makefile
mikan-os/apps/rpn/.cargo/: config.toml
mikan-os/apps/rpn/src/: main.rs
mikan-os/apps/rpn_cpp/: .gitignore  Makefile  rpn.cpp
mikan-os/apps/sort/: .gitignore  Cargo.toml  Makefile
mikan-os/apps/sort/src/: main.rs
mikan-os/apps/stack/: .gitignore  Cargo.toml  Makefile
mikan-os/apps/stack/src/: main.rs
mikan-os/apps/stars/: .gitignore  Cargo.toml  Makefile
mikan-os/apps/stars/src/: main.rs
mikan-os/apps/timer/: .gitignore  Cargo.toml  Makefile
mikan-os/apps/timer/src/: main.rs
mikan-os/apps/winhello/: .gitignore  Cargo.toml  Makefile
mikan-os/apps/winhello/.cargo/: config.toml
mikan-os/apps/winhello/src/: main.rs
mikan-os/apps/winjpn/: .gitignore  Cargo.toml  Makefile
mikan-os/apps/winjpn/src/: main.rs
mikan-os/custom-attribute/: Cargo.toml
mikan-os/custom-attribute/src/: lib.rs
mikan-os/kernel/: CMakeLists.txt  Cargo.toml  build.rs
mikan-os/kernel/.cargo/: config.toml
mikan-os/kernel/src/: acpi.rs  app_event.rs  asmfunc.rs  bitfield.rs  collections.rs  console.rs  elf.rs  errno.rs  error.rs  fat.rs  file.rs  font.rs  font_data.rs  frame_buffer.rs  frame_buffer_config.rs  graphics.rs  interrupt.rs  io.rs  keyboard.rs  layer.rs  lib.rs  logger.rs  main.rs  memory_manager.rs  memory_map.rs  message.rs  mouse.rs  msr.rs  paging.rs  pci.rs  placement.rs  queue.rs  segment.rs  string.rs  sync.rs  syscall.rs  task.rs  terminal.rs  timer.rs  usb.rs  (+4 more)
mikan-os/kernel/src/cxx/: logger.cpp  newlib_support.c
mikan-os/kernel/src/usb/classdriver/: keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp
mikan-os/mikan-loader/: Cargo.toml
mikan-os/mikan-loader/src/: chars.rs  elf.rs  graphics.rs  main.rs
mikan-os/resource/: jpn.txt
