[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[features]
not-check = []

[[bin]]
name = "kernel"
test = false
bench = false

[lib]
test = false
bench = false

[profile.dev]
panic = "abort"
opt-level = 3

[profile.release]
panic = "abort"
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom-attribute = { path = "../custom-attribute" }
uefi = "0.26.0"

[build-dependencies]
cc = "1.0"
